--- a/mediaqueries/homeme.css
+++ b/mediaqueries/homeme.css
@@ -9,7 +9,7 @@
         display: block;
         font-size: 1.4rem;
     }
-    body {
+    body,html {
         overflow-x: hidden !important;
     }
    
