--- a/mediaqueries/homeme.css
+++ b/mediaqueries/homeme.css
@@ -115,6 +115,17 @@
         background-color: var(--background);
         
     }
+    #startyour {
+        background-color: var(--off-blue);
+        width: 17rem;
+        height: 10vh;
+        border: none;
+        margin: 1.4rem 0;
+        color: var(--off-white);
+        font-size: 1.3rem;
+        cursor: pointer;
+        align-items: center;
+    }
     
     .column1 {
         width: 100%;
@@ -135,7 +146,7 @@
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between;
-        padding: 1.4rem 0.2rem;
+        padding: 1.4rem 1rem 0 0;
     }
     
     .ourexpertise-container-body{
