--- a/css/contact2.css
+++ b/css/contact2.css
@@ -6,7 +6,11 @@
    margin: 1rem 0;
 }
 
-.form-section.formtitle h2{
+.formtitle
+{
+    width: 100%;
+}
+.formtitle h2{
    text-align: center;
     
 }
@@ -89,23 +93,9 @@ border: 1px solid var(--off-blue);
  margin: 1px 0 3% 65%;
  }
 button:hover{
-    height: 41px;
-    width: 127px;
-    left: 623px;
-    top: 990px;
-    border-radius: 4px;
-    padding: 10px, 38px, 10px, 38px;
     background-color: var(--white);
     border: 1px solid var(--off-white);
     color: var(--off-blue);
-     cursor: pointer;
-     font-size: 1rem;
-     display: flex;
-
-
   
 }
-.button :hover{
-    padding: 0.4rem 0.7rem;
-    font-size: 1.3rem;
-}
+
