--- a/mediaqueries/footerme.css
+++ b/mediaqueries/footerme.css
@@ -99,7 +99,8 @@
     display: flex;
     align-items: center;
     font-size: 1rem;
-    padding: 1% 0 1% 34%;
+    margin-top:0.5rem;
+    padding: 1% 0 3% 10%;
 
 
 }
