--- a/mediaqueries/aboutme.css
+++ b/mediaqueries/aboutme.css
@@ -113,7 +113,7 @@
         flex-direction: column;
         width: 100%;
         margin: 2rem 0;
-        height: 40vh;
+        height: 50vh;
     }
 
     .ourleader-body-image {
@@ -129,7 +129,9 @@
         flex-direction: column;
         align-items: center;
     }
-
+   .ourleader-body-awesome i {
+    margin: 0.4rem 0;
+   }
     .ourmember-container-body {
         width: 100%;
         display: flex;
@@ -164,9 +166,14 @@
     }
 
     #ourvalue {
-        background: url(none);
+        background:url(none);
         height: 100%;
         width: 100%;
+    }
+    #ourvalue h2{
+
+        margin: 0rem;
+    
     }
 
     .ourvalue-container {
@@ -175,6 +182,8 @@
         flex-direction: column;
         width: 96%;
         padding-left: 4rem;
+    
+
     }
 
     .ourvalue-container-image {
@@ -184,7 +193,13 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 0 0 0 3rem;
+        margin: 0;
+        padding: 0 0 0 3.2rem;
+    }
+    .imagename{
+        padding: 0;
+        margin: 0;
+        transform: translateY(-40px);
     }
 
 
