--- a/css/career.css
+++ b/css/career.css
@@ -16,7 +16,7 @@
 }
 
 .title{
-    margin: 4rem 0 0.5rem 0 ;
+    margin: 4rem 0 0 0 ;
     text-align: center;
     color:var(--white);
     font-size: 2rem;
@@ -60,7 +60,7 @@
 }
 #vacancies{ 
    background-color: var(--background);
-    margin: 1rem 0 4rem 0;
+    margin: 0 0 4rem 0;
 }
 .vacancies-body{
     padding: 1rem;
@@ -91,7 +91,7 @@ padding: 0.5rem 0;
     width:100%;
     margin: 0.2rem 0;
     background-color: var(--off-blue);
-    height: 10vh;
+    height: 9vh;
     border: none;
     margin: 1.4rem 0;
     color: var(--off-white);
@@ -102,14 +102,9 @@ padding: 0.5rem 0;
 }
 .applybutton:hover{
     background-color:var(--white);
-    width: 100%;
-    height: 10vh;
-    border: none;
-    margin: 1.4rem 0rem;
     color: var(--off-blue);
-    font-size: 1.3rem;
-    cursor: pointer;
-    border: none;
-    border-radius: 0.4rem;
+    border: 1px solid var(--off-blue);
+   
+    
 
 }
