--- a/css/footer.css
+++ b/css/footer.css
@@ -79,17 +79,17 @@
     background: var(--off-blue);
     align-self: center;
     width: 100%;
-  
 
 
 }
-
 .copyright-footer p {
-    color: wheat;
+    color: var(--white);
     display: flex;
     align-items: center;
+    justify-content: center;
     font-size: 1rem;
-    padding: 2% 0 1% 34%;
+    padding: 1rem 0;
+
 
 
 }
