--- a/css/home.css
+++ b/css/home.css
@@ -71,16 +71,12 @@
     color: var(--off-white);
     font-size: 1.3rem;
     cursor: pointer;
+    border-radius: 4px;
 }
 #startyour:hover{
     background-color:var(--white);
-    width: 17rem;
-    height: 10vh;
-    border: none;
-    margin: 1.4rem 0rem;
     color: var(--off-blue);
-    font-size: 1.3rem;
-    cursor: pointer;
+    border: 1px solid var(--off-blue);
 
 }
 
@@ -98,8 +94,6 @@
 
 #ourexpertise {
     width: 100%;
-   
-
 }
 
 .ourclinets-title h2,
@@ -199,7 +193,6 @@ img {
     color: var(--off-blue);
 }
 
-
 .computerboy {
     height: 550px;
     display: flex;
@@ -230,7 +223,7 @@ img {
 
 }
 
-img {
+img{
     width: 100%;
     height: 100%;
     object-fit: contain;
