--- a/css/navbar.css
+++ b/css/navbar.css
@@ -8,10 +8,6 @@
     box-sizing: border-box;
     font-family: "Poppins", "sans-serif";
 }
- .Navbar__Link-toggle{
-    display: none;
-  
-} 
 
 body {
     width: 100%;
@@ -20,13 +16,23 @@ body {
     box-sizing: border-box;
 }
 
-.container {
-    padding: 0 0.1rem;
-    background-color: F8FCFF;
-}
-
 header {
     background-color: var(--white);
+}
+
+.nav-logo img {
+    display: flex;
+    top: 15%;
+
+}
+
+.logo {
+    margin: 0 1rem;
+}
+
+.Navbar__Link-toggle {
+    display: none;
+
 }
 
 #nav {
@@ -41,6 +47,7 @@ header {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+
 }
 
 .nav-menu {
@@ -56,23 +63,19 @@ header {
     padding: 0.5rem 0;
 }
 
-nav .active a {
-    color: var(--off-blue);
-}
-
-.nav-item a:hover {
-    color: var(--off-blue);
-}
-
-.nav-logo img {
-    display: flex;
-    top: 15%;
-
-}
-
 .nav-bar a {
     text-decoration: none;
     font-size: 1.2rem;
     color: var(--black);
 
+}
+
+nav .active a {
+    color: var(--off-blue);
+
+}
+
+.nav-item a:hover {
+    color: var(--off-blue);
+    text-shadow: 0.7px 0px var(--off-blue);
 }
