--- a/css/about.css
+++ b/css/about.css
@@ -234,9 +234,18 @@
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
-    filter: opacity(90%);
+    filter: opacity(100%);
     padding: 1rem 0 4rem 0;
     margin: 8rem 0;
+
+}
+#ourvalue .overlay{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.35);
 }
 
 
@@ -255,6 +264,7 @@
  padding-left: 0.1rem;
  font-weight: 700;
  letter-spacing: 1px;
+ opacity: 1;
 
 }
 
